--- a/index.css
+++ b/index.css
@@ -1,50 +1,41 @@
-html, body {
-    position: absolute;
-width: 550px;
-height: 550px;
+html{
+    background: #1A1921;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+body {
+    
+width: 42%;
+height: 80%;
 margin: 0px;
-/* left: 705px;
-top: 83px; */
-
 background: #FBF7EE;
 }
 
+.ui-display{
+    display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+}
 .main-div{
-    /* position: absolute;
-width: 550px;
-height: 260px;
-left: 0px;
-top: 0px; */
-/* background */
 
-
-position: absolute;
-width: 550px;
-height: 260px;
-left: 0px;
-top: 0px;
+width: 100%;
+margin-bottom: 2em;
 
 background: linear-gradient(246.26deg, #585DFE 0%, #FB3796 100%);
 }
 
 .main-heading{
     /* Heading */
-
-
-position: absolute;
-width: 448.4px;
-height: 38px;
-left: 51px;
-top: 53px;
-
 font-family: 'Inter';
 font-style: normal;
 font-weight: 800;
-font-size: 22px;
-line-height: 38px;
-/* identical to box height, or 173% */
-
-text-align: center;
+font-size: 1.5em;
+margin-top:1.5em;
+margin-bottom: 1em;
+margin-left: 4em;
+margin-right:4em;
 letter-spacing: -0.05em;
 
 color: #FFFFFF;
@@ -53,21 +44,14 @@ color: #FFFFFF;
 .number{
     /* number to convert */
 
-
-position: absolute;
-width: 211px;
-height: 80px;
-left: 169px;
-top: 135px;
-
 font-family: 'Inter';
 font-style: normal;
 font-weight: 800;
-font-size: 97.5723px;
-line-height: 39px;
-/* or 25% */
-
-text-align: center;
+font-size: 5em;
+margin-left: 3em;
+margin-right: 0.05em;
+padding-bottom: 0.5em;
+width:50%;
 
 color: #FFFFFF;
 background: transparent;
@@ -75,26 +59,16 @@ border: none;
 }
 
 .result{
-    position: absolute;
+    /* position: absolute;
 width: 346px;
 height: 215px;
 left: 102px;
-top: 297px;
-text-align: center;
-}
-
-.heading{
-    /* Supporting text */
-font-family: 'Inter';
-font-style: normal;
-font-weight: 600;
-font-size: 14px;
-line-height: 20px;
-/* or 143% */
-
-text-align: center;
-
-color: #1A1921;
+top: 297px; */
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+/* text-align: center; */
 }
 
 .conversion{
@@ -104,11 +78,11 @@ color: #1A1921;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 400;
-font-size: 14px;
-line-height: 20px;
+font-size: 1em;
+line-height: 1em;
 /* or 143% */
 
-text-align: center;
+/* text-align: center; */
 
 color: #4E4E4E;
 }
@@ -116,34 +90,60 @@ color: #4E4E4E;
 .conversion-result1{
     /* conversion-results */
 
-
-position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+/* position: absolute;
 width: 346px;
 height: 55px;
-left: 10px;
+left: 10px; */
+margin-top:0.2em;
+
 }
 
 .conversion-result2{
     /* conversion-results */
 
-
-position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+/* position: absolute;
 width: 346px;
 height: 55px;
 left: 10px;
-top: 50px;
+top: 50px; */
 }
 
 .conversion-result3{
     /* conversion-results */
 
-
-position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+/* position: absolute;
 width: 346px;
 height: 51px;
 left: 10px;
-top: 100px;
+top: 100px; */
 
+}
+
+.heading{
+    /* Supporting text */
+font-family: 'Inter';
+font-style: normal;
+font-weight: 600;
+font-size: 14px;
+line-height: 20px;
+
+/* or 143% */
+
+text-align: center;
+
+color: #1A1921;
 }
 
 input:focus {outline: none; }
