--- a/index.css
+++ b/index.css
@@ -43,13 +43,13 @@ color: #FFFFFF;
 
 .number{
     /* number to convert */
-
+    text-align: center;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 800;
 font-size: 5em;
-margin-left: 3em;
-margin-right: 0.05em;
+margin-left: 1.7em;
+margin-right: 1.7em;
 padding-bottom: 0.5em;
 width:50%;
 
