--- a/index.css
+++ b/index.css
@@ -52,7 +52,7 @@ margin-left: 1.7em;
 margin-right: 1.7em;
 padding-bottom: 0.5em;
 width:50%;
-
+text-align:center;
 color: #FFFFFF;
 background: transparent;
 border: none;
@@ -147,3 +147,13 @@ color: #1A1921;
 }
 
 input:focus {outline: none; }
+@media screen and (max-width: 500px){
+    body{
+        width: 100%;
+        height:65%;
+    }
+    .number{
+        margin-left: 1.2em;
+        margin-right: 2em;
+    }
+}
